@@ -43,27 +43,6 @@
 <ulink url="&downloadable-file;drivers.tgz">.../current/drivers.tgz</ulink>
 </para></listitem>
 
-<!-- m68k driver tarballs checked 2002-03-15 -->
-     
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/drivers.tgz">.../current/amiga/drivers.tgz</ulink>
- </para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/drivers.tgz">.../current/atari/drivers.tgz</ulink>
- </para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/drivers.tgz">.../current/bvme6000/drivers.tgz</ulink>
- </para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/drivers.tgz">.../current/mac/drivers.tgz</ulink>
- </para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/drivers.tgz">.../current/mvme147/drivers.tgz</ulink>
- </para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/drivers.tgz">.../current/mvme16x/drivers.tgz</ulink>
-</para></listitem>
-
 <!-- mips driver tarballs checked 2002-03-15 -->
 
 <listitem arch="mips"><para>
