@@ -288,188 +288,28 @@
 </para></listitem>
   '>
 
-<!-- m68k misc files checked 2002-03-15 -->
+<!-- m68k misc files checked 2004-07-28 -->
 
-  <!ENTITY list-m68k-install-docs '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;README.txt">.../current/README.txt</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-m68k-install-files '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;source/m68k-support.tar.gz">.../current/source/m68k-support.tar.gz</ulink>
-</para></listitem>
-  '>
-  <!ENTITY rawrite2.exe '
-<ulink url="&downloadable-file;rawrite2.exe">.../current/rawrite2.exe</ulink>
-  '>
   <!ENTITY rawwrite.ttp '
-<ulink url="&downloadable-file;rawwrite.ttp">.../current/rawwrite.ttp</ulink>
+<ulink url="&downloadable-file;images/atari/rawwrite.ttp">.../current/images/atari/rawwrite.ttp</ulink>
   '>
-  <!ENTITY list-m68k-system-maps '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/sysmap.gz">.../current/amiga/sysmap.gz</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/sysmap.gz">.../current/atari/sysmap.gz</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/sysmap.gz">.../current/bvme6000/sysmap.gz</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/sysmap.gz">.../current/mac/sysmap.gz</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/sysmap.gz">.../current/mvme16x/sysmap.gz</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-amiga-install-docs '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga.info">.../current/amiga.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;dmesg.readme">.../current/dmesg.readme</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/ReadMe_First">.../current/amiga/ReadMe_First</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/ReadMe_First.info">.../current/amiga/ReadMe_First.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/clgen.txt">.../current/amiga/clgen.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/clgen.txt.info">.../current/amiga/clgen.txt.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/cv3d.txt">.../current/amiga/cv3d.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/cv3d.txt.info">.../current/amiga/cv3d.txt.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/cv64.txt">.../current/amiga/cv64.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/cv64.txt.info">.../current/amiga/cv64.txt.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/install.doc">.../current/amiga/install.doc</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/install.doc.info">.../current/amiga/install.doc.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/ocs_ecs_aga.txt">.../current/amiga/ocs_ecs_aga.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/ocs_ecs_aga.txt.info">.../current/amiga/ocs_ecs_aga.txt.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/retz3.txt">.../current/amiga/retz3.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/retz3.txt.info">.../current/amiga/retz3.txt.info</ulink>
-</para></listitem>
-  '>
-  <!ENTITY amiga-install-tarball '
-<ulink url="&downloadable-file;amigainstall.tar.gz">.../current/amigainstall.tar.gz</ulink>'>
-  <!ENTITY list-amiga-install-files '
-<listitem arch="m68k"><para>
-    &amiga-install-tarball;
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;dmesg">.../current/dmesg</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/amiboot-5.6">.../current/amiga/amiboot-5.6</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall">.../current/amiga/StartInstall</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall.info">.../current/amiga/StartInstall.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_CV3D">.../current/amiga/StartInstall_CV3D</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_CV3D.info">.../current/amiga/StartInstall_CV3D.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_CV64">.../current/amiga/StartInstall_CV64</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_CV64.info">.../current/amiga/StartInstall_CV64.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_clgen">.../current/amiga/StartInstall_clgen</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_clgen.info">.../current/amiga/StartInstall_clgen.info</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_retz3">.../current/amiga/StartInstall_retz3</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/StartInstall_retz3.info">.../current/amiga/StartInstall_retz3.info</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-atari-install-docs '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/install.doc">.../current/atari/install.doc</ulink>
-</para></listitem>
-  '>
-  <!ENTITY atari-install-tarball '
-<ulink url="&downloadable-file;atariinstall.tar.gz">.../current/atariinstall.tar.gz</ulink>'>
-  <!ENTITY list-atari-install-files '
-<listitem arch="m68k"><para>
-    &atari-install-tarball;
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/bootstra.prg">.../current/atari/bootstra.prg</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/bootargs">.../current/atari/bootargs</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-bvme6000-install-docs '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/install.txt">.../current/bvme6000/install.txt</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/bvmbug.txt">.../current/bvme6000/bvmbug.txt</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-bvme6000-install-files '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/bvmbug-G.bin">.../current/bvme6000/bvmbug-G.bin</ulink>
-</para></listitem>
-  '>
-  <!ENTITY mac-install-tarball '
-<ulink url="&downloadable-file;macinstall.tar.gz">.../current/macinstall.tar.gz</ulink>'>
-  <!ENTITY list-mac-install-files '
-<listitem arch="m68k"><para>
-    &mac-install-tarball;
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/Penguin-19.hqx">.../current/mac/Penguin-19.hqx</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/Penguin-Colors.hqx">.../current/mac/Penguin-Colors.hqx</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/Penguin.doc.hqx">.../current/mac/Penguin.doc.hqx</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-mvme16x-install-docs '
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/install.txt">.../current/mvme16x/install.txt</ulink>
-</para></listitem>
-  '>
-  <!ENTITY list-mvme16x-install-files "" >
 
+  <!ENTITY ramdisksize '
+<userinput>ramdisk_size=13000</userinput>
+  '>
+
+<!-- these are old, but keep some translations building 2004-07-28 -->
+  <!ENTITY atari-install-tarball '
+<ulink url="&downloadable-file;atariinstall.tar.gz">.../current/atariinstall.tar.gz</ulink>
+  '>
+
+  <!ENTITY amiga-install-tarball '
+<ulink url="&downloadable-file;amigainstall.tar.gz">.../current/amigainstall.tar.gz</ulink>
+  '>
+
+  <!ENTITY mac-install-tarball '
+<ulink url="&downloadable-file;macinstall.tar.gz">.../current/macinstall.tar.gz</ulink>
+  '>
 
 <!-- mips misc files 2.3.0-2001-04-15 -->
 
