@@ -2,101 +2,21 @@
 <!-- $Id$ -->
 
 
-   <sect3 arch="m68k" id="amiga-install-files">
-   <title>AmigaOS Installation Files</title>
+   <sect3 arch="m68k" id="kernel-22">
+   <title>Choosing a Kernel</title>
 
-<orderedlist>
-<listitem><para>
+<para>
 
-Instead of the boot, root, and driver files above, just download
-&amiga-install-tarball;.
+Some m68k subarchs have a choice of kernels to install. In general we 
+recommend trying the most recent version first. If your subarch or 
+machine needs to use a 2.2.x kernel, make sure you choose one of the 
+images ending in 22 (see the <ulink url="&disturl;/main/installer-&architecture;/current/images/MANIFEST">MANIFEST</ulink>).
 
-</para></listitem>
-<listitem><para>
+</para>
+<para>
 
-Unpack &amiga-install-tarball; into a partition with at least 25MB
-free.  We recommend you unpack it into a directory named
-<filename>debian</filename>.  The &amiga-install-tarball; will create an
-<filename>amiga</filename> subdirectory.
+All of the m68k images for use with 2.2.x kernels, require the kernel 
+parameter &ramdisksize;.
 
-</para></listitem>
-<listitem><para>
-
-Write down the Linux partition name for the location where your new
-<filename>debian</filename> directory is.  See 
-<xref linkend="device-names"/> for more information on Linux partition
-naming.
-
-</para></listitem>
-</orderedlist>
-   </sect3>
-
-   <sect3 arch="m68k" id="atari-install-files">
-   <title>Atari TOS Installation Files </title>
-
-<orderedlist>
-<listitem><para>
-
-Instead of the boot, root, and driver files above, just download
-&atari-install-tarball;.
-
-</para></listitem>
-<listitem><para>
-
-Unpack &atari-install-tarball; into a partition with at least 25 MB
-free. We recommend you unpack it into a directory named
-<filename>debian</filename>.
-
-</para></listitem>
-<listitem><para>
-
-After unpacking, you should have an <filename>atari</filename>
-subdirectory. Do not rename any files in this directory.
-
-</para></listitem>
-<listitem><para>
-
-Write down the Linux partition name for the location where your new
-<filename>debian</filename> directory is. See 
-<xref linkend="device-names"/> for more
-information on Linux partition naming.
-
-</para></listitem>
-</orderedlist>
-   </sect3>
-
-   <sect3 arch="m68k" id="mac-install-files">
-   <title>68k MacOS Installation Files</title>
-
-<orderedlist>
-<listitem><para>
-
-Instead of the boot, root, and driver files above, just download
-&mac-install-tarball;.
-
-</para></listitem>
-<listitem><para>
-
-Unpack &mac-install-tarball; into a partition with at least 25 MB
-free. We recommend you unpack it into a directory named
-<filename>debian</filename>. Use <application>Stuffit Expander</application>
-(at least version 5.5) or <command>MacGZip</command> to extract it
-from its archive.
-
-</para></listitem>
-<listitem><para>
-
-After unpacking, you should have a <filename>mac</filename> subdirectory. Do
-not rename any files in this directory. Do not allow your
-decompression program to decompress drivers.tgz.
-
-</para></listitem>
-<listitem><para>
-
-Write down the Linux partition name for the location where your new
-<filename>debian</filename> directory is. See <xref linkend="device-names"/>
-for more information on Linux partition naming.
-
-</para></listitem>
-</orderedlist>
+</para>
    </sect3>
